--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-key-handler": "^1.2.0-beta.3",
     "react-scripts": "2.1.8"
   },
   "scripts": {
